move jquery to local and fix tap targets on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,7 +106,7 @@ iframe {
 .about-the-show {
   font-family: 'neeta';
   font-size: 18px;
-  line-height: 1.4em;
+  line-height: 1.5em;
   color: white;
 
   max-width: 1000px;
@@ -160,7 +160,7 @@ iframe {
 
 .david {
   font-family: 'grotesque_mtbold';
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .lily {
